Fix linking on s390x

Ensure all symbols are available and don't hide the template
instantiation.

BUG: 417679